# rust_learn_opengl

./: Cargo.toml  README.md  c_cpp_properties.json
doc/: 事件处理设计.dio
includes/glad/: glad.h
src/: camera.rs  context.rs  glad.c  keyboard.rs  lib.rs  lights.rs  main.rs  material.rs  mouse.rs  objects.rs  objectsv2.rs  test.cpp  uniforms.rs  utils.rs
src/event/: keyboard.rs  mod.rs  mouse.rs
src/skybox/: 注意.txt
tests/: temp.rs
