[package]
name = "rust_opengl_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
image = "0.24.3"
cgmath = { version = "0.18.0", features = ["swizzle"]}
obj = { version = "0.10.2", features = ["genmesh"] }
futures = { version = "0.3.25", features = ["thread-pool"]}
chrono = "0.4.23"
num-traits = "0.2.15"
rand = "0.8.5"